--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-three/drei": "^9.107.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
     "react": "^18.3.1",
